--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1a26ac87",
    "metadata": {
     "deletable": false,
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a4651888-484b-42a0-95e1-d273e5069205",
    "metadata": {
     "slideshow": {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b4823523-ca44-48a3-94bb-f6e453d27f1c",
    "metadata": {
     "metadata": {
@@ -177,7 +177,15 @@
      ]
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fasttext-wiki-news-subwords-300', 'conceptnet-numberbatch-17-06-300', 'word2vec-ruscorpora-300', 'word2vec-google-news-300', 'glove-wiki-gigaword-50', 'glove-wiki-gigaword-100', 'glove-wiki-gigaword-200', 'glove-wiki-gigaword-300', 'glove-twitter-25', 'glove-twitter-50', 'glove-twitter-100', 'glove-twitter-200', '__testing_word2vec-matrix-synopsis']\n"
+     ]
+    }
+   ],
    "source": [
     "import gensim\n",
     "import gensim.downloader\n",
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "83e4717e-215b-4c1b-b08a-9f5adbb52467",
    "metadata": {
     "metadata": {
@@ -206,10 +214,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "76ec38c4-ce89-4372-b015-035f4d682132",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(glove_wiki_vectors)"
    ]
@@ -275,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6205ebad-49a9-435a-bf84-ae57d29c2068",
    "metadata": {
     "metadata": {
@@ -287,9 +306,29 @@
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('yellow', 0.7358633279800415),\n",
+       " ('dog', 0.8798074722290039),\n",
+       " ('animal', 0.7462460398674011),\n",
+       " ('cat', 0.6915250420570374)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "..."
+    "listOfWords = [\"orange\", \"cat\", 'human', 'mouse']\n",
+    "listOfSimilarWords = []\n",
+    "\n",
+    "for i in range(len(listOfWords)):\n",
+    "    listOfSimilarWords.append(glove_wiki_vectors.similar_by_word(listOfWords[i])[0])\n",
+    "\n",
+    "listOfSimilarWords"
    ]
   },
   {
@@ -396,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6b37d06f-81c7-4120-8dc7-2270105d5ecb",
    "metadata": {
     "deletable": false,
@@ -433,16 +472,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c7c8c6c4-7113-4cb2-98f8-d34ec1c632e7",
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.70002717, 0.54627603, 0.64324886, 0.7552733, 0.8798075, 0.07671946]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "..."
+    "similarities = []\n",
+    "\n",
+    "for i in range(len(word_pairs)):\n",
+    "    similarities.append(glove_wiki_vectors.similarity(word_pairs[i][0], word_pairs[i][1]))\n",
+    "    \n",
+    "similarities"
    ]
   },
   {
@@ -479,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "be6a6488-5139-43cb-a88c-b1d45df700cf",
    "metadata": {
     "deletable": false,
@@ -520,16 +575,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "44097c5d-97a0-450e-af88-73c9a4c90c94",
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Following words are not in the vocabulary:\n",
+      "covididiot\n",
+      "fomo\n",
+      "anthropause\n",
+      "photobomb\n",
+      "selfie\n",
+      "pxg\n",
+      "pacg\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "print(\"Following words are not in the vocabulary:\")\n",
+    "\n",
+    "for i in range(len(test_words)):\n",
+    "    try:\n",
+    "        glove_wiki_vectors.most_similar(test_words[i])\n",
+    "    except:\n",
+    "        print(test_words[i])\n"
    ]
   },
   {
@@ -571,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2a90c0cd-7cf2-4f82-a617-9a87c526281d",
    "metadata": {
     "deletable": false,
@@ -616,39 +692,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e914a9fa-e1e9-4182-a82d-41737020e44f",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "man : doctor :: woman : ?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Analogy word</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>nurse</td>\n",
+       "      <td>0.773523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>physician</td>\n",
+       "      <td>0.718943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>doctors</td>\n",
+       "      <td>0.682433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>patient</td>\n",
+       "      <td>0.675068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dentist</td>\n",
+       "      <td>0.672603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>pregnant</td>\n",
+       "      <td>0.664246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>medical</td>\n",
+       "      <td>0.652045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>nursing</td>\n",
+       "      <td>0.645348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>mother</td>\n",
+       "      <td>0.639333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>hospital</td>\n",
+       "      <td>0.638750</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Analogy word     Score\n",
+       "0        nurse  0.773523\n",
+       "1    physician  0.718943\n",
+       "2      doctors  0.682433\n",
+       "3      patient  0.675068\n",
+       "4      dentist  0.672603\n",
+       "5     pregnant  0.664246\n",
+       "6      medical  0.652045\n",
+       "7      nursing  0.645348\n",
+       "8       mother  0.639333\n",
+       "9     hospital  0.638750"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "analogy(\"man\", \"doctor\", \"woman\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "fceb0128-3c9b-4674-ae40-da3d80f3f00c",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.14283238"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "glove_wiki_vectors.similarity(\"aboriginal\", \"success\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "774cb08e-95bc-458b-bc78-ee3fcf2b2f7a",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35182396"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "glove_wiki_vectors.similarity(\"white\", \"success\")"
    ]
@@ -672,58 +876,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a227771e-f8b7-4bad-9881-eb5528f10e9e",
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42311805"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "..."
+    "glove_wiki_vectors.similarity(\"straight\", \"normal\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6025b7c9-5ffd-4076-8d44-0440d01efe69",
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24128261"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "..."
+    "glove_wiki_vectors.similarity(\"gay\", \"normal\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "deaa74e9-858e-4b28-a7a8-6b6b522c1ef6",
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.37245172"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "..."
+    "glove_wiki_vectors.similarity(\"man\", \"intelligence\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "95e306e7-26f3-4367-8935-0be49b86be56",
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.31522363"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "..."
+    "glove_wiki_vectors.similarity(\"woman\", \"intelligence\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3cd63c83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "man : smart :: woman : ?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Analogy word</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>intelligent</td>\n",
+       "      <td>0.654885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sexy</td>\n",
+       "      <td>0.597897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sophisticated</td>\n",
+       "      <td>0.574362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mom</td>\n",
+       "      <td>0.557256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cute</td>\n",
+       "      <td>0.549813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>kids</td>\n",
+       "      <td>0.540299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>pretty</td>\n",
+       "      <td>0.530862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>savvy</td>\n",
+       "      <td>0.530233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>innovative</td>\n",
+       "      <td>0.530197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>attractive</td>\n",
+       "      <td>0.528517</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Analogy word     Score\n",
+       "0    intelligent  0.654885\n",
+       "1           sexy  0.597897\n",
+       "2  sophisticated  0.574362\n",
+       "3            mom  0.557256\n",
+       "4           cute  0.549813\n",
+       "5           kids  0.540299\n",
+       "6         pretty  0.530862\n",
+       "7          savvy  0.530233\n",
+       "8     innovative  0.530197\n",
+       "9     attractive  0.528517"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analogy(\"man\", \"smart\", \"woman\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "9be2cb5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42785946"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glove_wiki_vectors.similarity(\"french\", \"immigrant\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2ca4e86d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5355006"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glove_wiki_vectors.similarity(\"mexican\", \"immigrant\")"
    ]
   },
   {
@@ -783,7 +1189,7 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "There are some worrying biases in these embeddings. From the examples above, it is clear that the embeddings seem to have captured certain stereotypes based on race, sexuality, and sex. For example, the similarity score for \"straight\" and \"normal\" was nearly double the score for \"gay\" and \"normal\" indicating a heteronormative bias. These biases can lead to harmful outputs in deployed systems. For example, chatbots trained on the embeddings could return offensive outputs when asked about certain identities which have been associated with stereotypes by the embeddings. Another example would be hiring algorithms discriminating based on stereotypes captured by the embeddings."
    ]
   },
   {
@@ -817,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "327ca91e-cf57-4481-b4cc-46c29a9849a3",
    "metadata": {},
    "outputs": [],
@@ -1355,9 +1761,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cpsc330]",
+   "display_name": "cpsc330st",
    "language": "python",
-   "name": "conda-env-cpsc330-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1369,7 +1775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.19"
   },
   "otter": {
    "OK_FORMAT": true,
